--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "author": "Peter Goes (petergoes.nl)",
   "license": "ISC",
   "devDependencies": {
+    "front-matter": "2.1.2",
     "gulp": "3.9.1",
-    "gulp-nunjucks": "3.0.0",
-    "gulp-task-listing": "1.0.1"
+    "gulp-changed": "git:github.com/petergoes/gulp-changed.git",
+    "gulp-rename": "1.2.2",
+    "gulp-task-listing": "1.0.1",
+    "gulp-transform": "1.1.0",
+    "marked": "0.3.6",
+    "nunjucks": "3.0.0"
   }
 }
