--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "PeterGoes.nl website",
   "main": "build/index.html",
   "scripts": {
-    "start": "gulp html",
-    "watch": "gulp watch"
+    "start": "gulp serve"
   },
   "keywords": [
     "petergoes.nl"
@@ -22,10 +21,10 @@
     "front-matter": "2.1.2",
     "gulp": "3.9.1",
     "gulp-changed": "git:github.com/petergoes/gulp-changed.git",
+    "gulp-connect": "5.0.0",
     "gulp-rename": "1.2.2",
     "gulp-task-listing": "1.0.1",
     "gulp-transform": "1.1.0",
-    "gulp-watch": "4.3.11",
     "marked": "0.3.6",
     "nunjucks": "3.0.0",
     "run-sequence": "1.2.2"
