--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "3.9.1",
     "gulp-changed": "git:github.com/petergoes/gulp-changed.git",
     "gulp-connect": "5.0.0",
+    "gulp-if": "2.0.2",
     "gulp-rename": "1.2.2",
     "gulp-task-listing": "1.0.1",
     "gulp-transform": "1.1.0",
