--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "front-matter": "2.1.2",
     "gravatar": "1.6.0",
     "gulp": "3.9.1",
-    "gulp-changed": "git:github.com/petergoes/gulp-changed.git",
+    "gulp-changed": "2.0.0",
     "gulp-connect": "5.0.0",
     "gulp-if": "2.0.2",
     "gulp-rename": "1.2.2",
