--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-changed": "2.0.0",
     "gulp-connect": "5.0.0",
     "gulp-if": "2.0.2",
+    "gulp-less": "3.3.0",
     "gulp-rename": "1.2.2",
     "gulp-task-listing": "1.0.1",
     "gulp-transform": "1.1.0",
