--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-eslint": "7.1.1",
     "eslint": "3.15.0",
+    "fontfaceobserver": "2.0.8",
     "front-matter": "2.1.2",
     "gravatar": "1.6.0",
     "gulp": "3.9.1",
