--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-eslint": "7.1.1",
+    "cheerio": "0.22.0",
     "eslint": "3.15.0",
     "fontfaceobserver": "2.0.8",
     "front-matter": "2.1.2",
@@ -30,6 +31,7 @@
     "gulp-rename": "1.2.2",
     "gulp-task-listing": "1.0.1",
     "gulp-transform": "1.1.0",
+    "highlight.js": "9.9.0",
     "marked": "0.3.6",
     "nunjucks": "3.0.0",
     "run-sequence": "1.2.2"
