--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "build/index.html",
   "scripts": {
     "start": "gulp clean && gulp serve",
+    "build": "gulp clean && gulp build",
+    "build:production": "gulp clean && gulp build && gulp compress",
     "gulp": "gulp"
   },
   "keywords": [
@@ -27,6 +29,7 @@
     "gulp": "3.9.1",
     "gulp-changed": "2.0.0",
     "gulp-connect": "5.0.0",
+    "gulp-gzip": "1.4.0",
     "gulp-if": "2.0.2",
     "gulp-less": "3.3.0",
     "gulp-rename": "1.2.2",
