--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "gulp clean && gulp serve",
     "build": "gulp clean && gulp build",
     "build:production": "gulp clean && gulp build && gulp compress",
+    "deploy": "gulp deploy",
     "gulp": "gulp"
   },
   "keywords": [
@@ -19,6 +20,7 @@
   "author": "Peter Goes (petergoes.nl)",
   "license": "ISC",
   "devDependencies": {
+    "aws-sdk": "2.20.0",
     "babel-eslint": "7.1.1",
     "cheerio": "0.22.0",
     "del": "2.2.2",
@@ -38,7 +40,10 @@
     "gulp-watch": "4.3.11",
     "highlight.js": "9.9.0",
     "marked": "0.3.6",
+    "mime": "1.3.4",
     "nunjucks": "3.0.0",
+    "promise-defer": "1.0.0",
+    "recursive-readdir": "2.1.1",
     "run-sequence": "1.2.2"
   }
 }
