chore: update deploy command

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "gulp clean && gulp serve",
     "build": "gulp clean && gulp build",
     "build:production": "gulp clean && gulp build && gulp compress",
-    "deploy": "gulp deploy",
+    "deploy": "npm run build:production && gulp deploy",
     "gulp": "gulp"
   },
   "keywords": [
