--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "front-matter": "2.1.2",
     "gravatar": "1.6.0",
     "gulp": "3.9.1",
+    "gulp-autoprefixer": "3.1.1",
     "gulp-changed": "2.0.0",
+    "gulp-clean-css": "3.0.3",
     "gulp-connect": "5.0.0",
     "gulp-gzip": "1.4.0",
     "gulp-if": "2.0.2",
     "gulp-less": "3.3.0",
     "gulp-rename": "1.2.2",
+    "gulp-sourcemaps": "2.4.1",
     "gulp-task-listing": "1.0.1",
     "gulp-transform": "1.1.0",
     "gulp-watch": "4.3.11",
