--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "gulp clean && gulp serve",
     "build": "gulp clean && gulp build",
-    "build:production": "gulp clean && gulp build && gulp compress",
-    "deploy": "npm run build:production && gulp deploy",
+    "build:production": "gulp clean && gulp build && gulp rev",
+    "deploy": "npm run build:production && gulp compress && gulp deploy",
     "gulp": "gulp"
   },
   "keywords": [
@@ -37,6 +37,8 @@
     "gulp-if": "2.0.2",
     "gulp-less": "3.3.0",
     "gulp-rename": "1.2.2",
+    "gulp-rev": "7.1.2",
+    "gulp-rev-replace": "0.4.3",
     "gulp-sourcemaps": "2.4.1",
     "gulp-task-listing": "1.0.1",
     "gulp-transform": "1.1.0",
