--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "aws-sdk": "2.20.0",
     "babel-eslint": "7.1.1",
+    "babel-plugin-external-helpers": "6.22.0",
+    "babel-preset-es2015": "6.22.0",
     "cheerio": "0.22.0",
     "del": "2.2.2",
     "eslint": "3.15.0",
@@ -49,6 +51,8 @@
     "nunjucks": "3.0.0",
     "promise-defer": "1.0.0",
     "recursive-readdir": "2.1.1",
+    "rollup": "0.41.4",
+    "rollup-plugin-babel": "2.7.1",
     "run-sequence": "1.2.2"
   }
 }
