--- a/package.json
+++ b/package.json
@@ -53,6 +53,11 @@
     "recursive-readdir": "2.1.1",
     "rollup": "0.41.4",
     "rollup-plugin-babel": "2.7.1",
+    "rollup-plugin-commonjs": "7.1.0",
+    "rollup-plugin-node-resolve": "2.0.0",
     "run-sequence": "1.2.2"
+  },
+  "dependencies": {
+    "whatwg-fetch": "2.0.3"
   }
 }
