--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rollup-plugin-babel": "2.7.1",
     "rollup-plugin-commonjs": "7.1.0",
     "rollup-plugin-node-resolve": "2.0.0",
+    "rollup-plugin-uglify": "1.0.1",
     "run-sequence": "1.2.2"
   },
   "dependencies": {
