--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "gulp clean && gulp serve",
     "build": "gulp clean && gulp build",
-    "build:production": "gulp clean && gulp build && gulp rev",
+    "build:production": "gulp clean && gulp build && gulp critical && gulp rev",
     "deploy": "npm run build:production && gulp compress && gulp deploy",
     "gulp": "gulp"
   },
@@ -25,6 +25,7 @@
     "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-es2015": "6.22.0",
     "cheerio": "0.22.0",
+    "critical": "0.8.4",
     "del": "2.2.2",
     "eslint": "3.15.0",
     "fontfaceobserver": "2.0.8",
