--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-clean-css": "3.0.3",
     "gulp-connect": "5.0.0",
     "gulp-gzip": "1.4.0",
+    "gulp-htmlmin": "3.0.0",
     "gulp-if": "2.0.2",
     "gulp-less": "3.3.0",
     "gulp-rename": "1.2.2",
