--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "gulp-gzip": "1.4.0",
     "gulp-htmlmin": "3.0.0",
     "gulp-if": "2.0.2",
+    "gulp-imagemin": "3.1.1",
     "gulp-less": "3.3.0",
     "gulp-rename": "1.2.2",
+    "gulp-responsive": "2.7.0",
     "gulp-rev": "7.1.2",
     "gulp-rev-replace": "0.4.3",
     "gulp-sourcemaps": "2.4.1",
@@ -48,6 +50,8 @@
     "gulp-transform": "1.1.0",
     "gulp-watch": "4.3.11",
     "highlight.js": "9.9.0",
+    "imagemin-jpeg-recompress": "5.1.0",
+    "imagemin-optipng": "5.2.1",
     "marked": "0.3.6",
     "mime": "1.3.4",
     "nunjucks": "3.0.0",
