--- a/src/web-manifest.json
+++ b/src/web-manifest.json
@@ -9,32 +9,42 @@
   "description": "",
   "icons": [
     {
-      "src": "images/touch/homescreen48.png",
+      "src": "/logo/logo-16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "/logo/logo-32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "/logo/logo-48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "images/touch/homescreen72.png",
+      "src": "/logo/logo-72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "images/touch/homescreen96.png",
+      "src": "/logo/logo-96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "images/touch/homescreen144.png",
+      "src": "/logo/logo-144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "images/touch/homescreen168.png",
+      "src": "/logo/logo-168.png",
       "sizes": "168x168",
       "type": "image/png"
     },
     {
-      "src": "images/touch/homescreen192.png",
+      "src": "/logo/logo-192.png",
       "sizes": "192x192",
       "type": "image/png"
     }
