--- a/src/web-manifest.json
+++ b/src/web-manifest.json
@@ -9,42 +9,42 @@
   "description": "",
   "icons": [
     {
-      "src": "/logo/logo-16.png",
+      "src": "/assets/logo/logo-16.png",
       "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "/logo/logo-32.png",
+      "src": "/assets/logo/logo-32.png",
       "sizes": "32x32",
       "type": "image/png"
     },
     {
-      "src": "/logo/logo-48.png",
+      "src": "/assets/logo/logo-48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "/logo/logo-72.png",
+      "src": "/assets/logo/logo-72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/logo/logo-96.png",
+      "src": "/assets/logo/logo-96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/logo/logo-144.png",
+      "src": "/assets/logo/logo-144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/logo/logo-168.png",
+      "src": "/assets/logo/logo-168.png",
       "sizes": "168x168",
       "type": "image/png"
     },
     {
-      "src": "/logo/logo-192.png",
+      "src": "/assets/logo/logo-192.png",
       "sizes": "192x192",
       "type": "image/png"
     }
