--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-eslint": "7.1.1",
     "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-es2015": "6.22.0",
+    "bluebird": "3.5.0",
     "cheerio": "0.22.0",
     "critical": "0.8.4",
     "del": "2.2.2",
@@ -54,6 +55,7 @@
     "imagemin-optipng": "5.2.1",
     "marked": "0.3.6",
     "mime": "1.3.4",
+    "mz": "2.6.0",
     "nunjucks": "3.0.0",
     "promise-defer": "1.0.0",
     "recursive-readdir": "2.1.1",
