--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "PeterGoes.nl website",
   "main": "build/index.html",
   "scripts": {
-    "start": "gulp clean && gulp serve",
-    "build": "gulp clean && gulp build",
+    "start": "gulp clean && gulp images:build && npm run nodemon",
+    "nodemon": "nodemon --ignore content --ignore dist --ignore src --exec npm run develop",
+    "develop": "NODE_ENV=development npm run build && gulp serve",
+    "build": "gulp build",
     "build:production": "gulp clean && gulp build && gulp critical && gulp rev",
     "deploy": "npm run build:production && gulp compress && gulp deploy",
     "gulp": "gulp"
@@ -57,6 +59,7 @@
     "marked": "0.3.6",
     "mime": "1.3.4",
     "mz": "2.6.0",
+    "nodemon": "1.11.0",
     "nunjucks": "3.0.0",
     "promise-defer": "1.0.0",
     "recursive-readdir": "2.1.1",
