--- a/package.json
+++ b/package.json
@@ -22,52 +22,53 @@
   "author": "Peter Goes (petergoes.nl)",
   "license": "ISC",
   "devDependencies": {
-    "aws-sdk": "2.20.0",
-    "babel-eslint": "7.1.1",
+    "aws-sdk": "2.134.0",
+    "babel-core": "6.26.0",
+    "babel-eslint": "8.0.1",
     "babel-plugin-external-helpers": "6.22.0",
-    "babel-preset-es2015": "6.22.0",
-    "bluebird": "3.5.0",
-    "cheerio": "0.22.0",
-    "critical": "0.8.4",
-    "del": "2.2.2",
-    "eslint": "3.15.0",
-    "fontfaceobserver": "2.0.8",
-    "front-matter": "2.1.2",
+    "babel-preset-env": "1.6.1",
+    "bluebird": "3.5.1",
+    "cheerio": "1.0.0-rc.2",
+    "critical": "0.9.1",
+    "del": "3.0.0",
+    "eslint": "4.9.0",
+    "fontfaceobserver": "2.0.13",
+    "front-matter": "2.2.0",
     "gravatar": "1.6.0",
     "gulp": "3.9.1",
-    "gulp-autoprefixer": "3.1.1",
-    "gulp-changed": "2.0.0",
-    "gulp-clean-css": "3.0.3",
+    "gulp-autoprefixer": "4.0.0",
+    "gulp-changed": "3.1.0",
+    "gulp-clean-css": "3.9.0",
     "gulp-connect": "5.0.0",
     "gulp-gzip": "1.4.0",
     "gulp-htmlmin": "3.0.0",
     "gulp-if": "2.0.2",
-    "gulp-imagemin": "3.1.1",
-    "gulp-less": "3.3.0",
+    "gulp-imagemin": "3.4.0",
+    "gulp-less": "3.3.2",
     "gulp-rename": "1.2.2",
-    "gulp-responsive": "2.7.0",
-    "gulp-rev": "7.1.2",
+    "gulp-responsive": "2.8.0",
+    "gulp-rev": "8.0.0",
     "gulp-rev-replace": "0.4.3",
-    "gulp-sourcemaps": "2.4.1",
+    "gulp-sourcemaps": "2.6.1",
     "gulp-task-listing": "1.0.1",
-    "gulp-transform": "1.1.0",
+    "gulp-transform": "3.0.5",
     "gulp-watch": "4.3.11",
-    "highlight.js": "9.9.0",
+    "highlight.js": "9.12.0",
     "imagemin-jpeg-recompress": "5.1.0",
     "imagemin-optipng": "5.2.1",
-    "is-gzip": "1.0.0",
+    "is-gzip": "2.0.0",
     "marked": "0.3.6",
-    "mime": "1.3.4",
-    "mz": "2.6.0",
-    "nodemon": "1.11.0",
-    "nunjucks": "3.0.0",
+    "mime": "2.0.3",
+    "mz": "2.7.0",
+    "nodemon": "1.12.1",
+    "nunjucks": "3.0.1",
     "promise-defer": "1.0.0",
-    "recursive-readdir": "2.1.1",
-    "rollup": "0.41.4",
-    "rollup-plugin-babel": "2.7.1",
-    "rollup-plugin-commonjs": "7.1.0",
-    "rollup-plugin-node-resolve": "2.0.0",
-    "rollup-plugin-uglify": "1.0.1",
-    "run-sequence": "1.2.2"
+    "recursive-readdir": "2.2.1",
+    "rollup": "0.50.0",
+    "rollup-plugin-babel": "3.0.2",
+    "rollup-plugin-commonjs": "8.2.1",
+    "rollup-plugin-node-resolve": "3.0.0",
+    "rollup-plugin-uglify": "2.0.1",
+    "run-sequence": "2.2.0"
   }
 }
