--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "gulp clean && gulp images:build && npm run nodemon",
     "nodemon": "nodemon --exec npm run develop --ignore content --ignore dist --ignore src --ignore node_modules --ignore bower_components",
-    "develop": "NODE_ENV=development npm run build && gulp serve",
+    "develop": "cross-env-shell NODE_ENV=development npm run build && gulp serve",
     "build": "gulp build",
-    "build:production": "gulp clean && gulp build && gulp critical && gulp rev",
+    "build:production": "cross-env-shell NODE_ENV=production \"gulp clean && gulp build && gulp critical && gulp rev\"",
     "deploy": "npm run build:production && gulp compress && gulp deploy",
     "gulp": "gulp"
   },
@@ -28,10 +28,13 @@
     "babel-plugin-external-helpers": "6.22.0",
     "babel-preset-env": "1.6.1",
     "bluebird": "3.5.1",
+    "chalk": "2.3.0",
     "cheerio": "1.0.0-rc.2",
     "critical": "0.9.1",
+    "cross-env": "5.1.3",
     "del": "3.0.0",
     "eslint": "4.9.0",
+    "fancy-log": "1.3.2",
     "fontfaceobserver": "2.0.13",
     "front-matter": "2.2.0",
     "gravatar": "1.6.0",
@@ -43,6 +46,7 @@
     "gulp-gzip": "1.4.0",
     "gulp-htmlmin": "3.0.0",
     "gulp-if": "2.0.2",
+    "gulp-ignore": "2.0.2",
     "gulp-imagemin": "3.4.0",
     "gulp-less": "3.3.2",
     "gulp-rename": "1.2.2",
