--- a/src/web-manifest.json
+++ b/src/web-manifest.json
@@ -1,1 +1,52 @@
-{"name":"PeterGoes.nl","short_name":"PeterGoes.nl","start_url":"./?homescreen=true","display":"browser","orientation":"any","background_color":"#263238","theme_color":"#263238","description":"My home on the web","icons":[{"src":"/assets/logo/logo-16.png","sizes":"16x16","type":"image/png"},{"src":"/assets/logo/logo-32.png","sizes":"32x32","type":"image/png"},{"src":"/assets/logo/logo-48.png","sizes":"48x48","type":"image/png"},{"src":"/assets/logo/logo-72.png","sizes":"72x72","type":"image/png"},{"src":"/assets/logo/logo-96.png","sizes":"96x96","type":"image/png"},{"src":"/assets/logo/logo-144.png","sizes":"144x144","type":"image/png"},{"src":"/assets/logo/logo-168.png","sizes":"168x168","type":"image/png"},{"src":"/assets/logo/logo-192.png","sizes":"192x192","type":"image/png"}]}
+{
+  "name": "PeterGoes.nl",
+  "short_name": "PeterGoes.nl",
+  "start_url": "./?homescreen=true",
+  "display": "browser",
+  "orientation": "any",
+  "background_color": "#263238",
+  "theme_color": "#263238",
+  "description": "My home on the web",
+  "icons": [
+    {
+      "src": "/assets/logo/logo-16.png",
+      "sizes": "16x16",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/logo/logo-32.png",
+      "sizes": "32x32",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/logo/logo-48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/logo/logo-72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/logo/logo-96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/logo/logo-144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/logo/logo-168.png",
+      "sizes": "168x168",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/logo/logo-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ]
+}
