--- a/src/web-manifest.json
+++ b/src/web-manifest.json
@@ -46,6 +46,12 @@
     {
       "src": "/assets/logo/logo-192.png",
       "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/assets/logo/logo-512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
