--- a/src/web-manifest.json
+++ b/src/web-manifest.json
@@ -2,7 +2,7 @@
   "name": "PeterGoes.nl",
   "short_name": "PeterGoes.nl",
   "start_url": "./?homescreen=true",
-  "display": "standalone",
+  "display": "fullscreen",
   "orientation": "any",
   "background_color": "#263238",
   "theme_color": "#263238",
