--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "devDependencies": {
     "@11ty/eleventy": "0.12.1",
     "@11ty/eleventy-plugin-inclusive-language": "1.0.2",
+    "@11ty/eleventy-plugin-rss": "1.1.1",
     "gravatar": "1.8.1"
+  },
+  "dependencies": {
+    "@11ty/eleventy-img": "0.8.3"
   }
 }
