--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@11ty/eleventy": "0.12.1",
     "@11ty/eleventy-plugin-inclusive-language": "1.0.2",
     "@11ty/eleventy-plugin-rss": "1.1.1",
+    "@11ty/eleventy-plugin-syntaxhighlight": "3.1.0",
     "gravatar": "1.8.1"
   },
   "dependencies": {
