--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@11ty/eleventy-plugin-inclusive-language": "1.0.2",
     "@11ty/eleventy-plugin-rss": "1.1.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "3.1.0",
+    "dotenv-save": "1.2.0",
     "gravatar": "1.8.1"
   },
   "dependencies": {
