--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "eleventy --serve",
+    "build": "DEVELOPMENT=false eleventy",
+    "postbuild": "node post-build-css-inject.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,9 +25,18 @@
     "@11ty/eleventy-plugin-rss": "1.1.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "3.1.0",
     "dotenv-save": "1.2.0",
+    "glob-promise": "4.1.0",
     "gravatar": "1.8.1"
   },
   "dependencies": {
-    "@11ty/eleventy-img": "0.8.3"
+    "@11ty/eleventy-img": "0.8.3",
+    "autoprefixer": "10.2.5",
+    "cssnano": "4.1.11",
+    "mkdirp": "1.0.4",
+    "postcss": "8.2.9",
+    "postcss-custom-properties": "11.0.0",
+    "postcss-import": "14.0.1",
+    "postcss-media-variables": "2.0.1",
+    "purgecss": "4.0.3"
   }
 }
