--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@11ty/eleventy-img": "0.8.3",
     "autoprefixer": "10.2.5",
     "cssnano": "4.1.11",
+    "html-minifier": "4.0.0",
     "mkdirp": "1.0.4",
     "postcss": "8.2.9",
     "postcss-custom-properties": "11.0.0",
