--- a/_public/cms/config.yml
+++ b/_public/cms/config.yml
@@ -25,9 +25,9 @@ collections:
     create: true
     fields:
       - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
+      - { label: "Publish", name: "permalink", widget: "publish", default: '"{{ page.filePathStem }}/index.html"' }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Tags", name: "tags", widget: "list", allow_add: true, default: ["blog"] }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Body", name: "body", widget: "markdown", default: " " }
-      - { label: "Permalink", name: "permalink", widget: "string", default: '"{{ page.filePathStem }}/index.html"' }
