--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gravatar": "1.8.1",
     "html-minifier": "4.0.0",
     "mkdirp": "1.0.4",
+    "netlify-cli": "3.22.0",
     "postcss": "8.2.9",
     "postcss-custom-properties": "11.0.0",
     "postcss-import": "14.0.1",
@@ -39,6 +40,7 @@
     "purgecss": "4.0.3"
   },
   "dependencies": {
-    "dayjs": "1.10.4"
+    "dayjs": "1.10.4",
+    "node-fetch": "2.6.1"
   }
 }
