--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,8 @@
 [functions]
   directory = "netlify-functions"
+
+[[redirects]]
+  from = "/bookmarks/tags/*"
+  to = "/bookmarks/tags/index.html"
+  status = 200
+  force = true
