Add raw to blog

--- a/_public/cms/config.yml
+++ b/_public/cms/config.yml
@@ -30,5 +30,5 @@ collections:
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Tags", name: "tags", widget: "list", allow_add: true, default: ["blog"] }
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Tweet URL", name: "tweet-url", widget: 'url'  }
+      - { label: "Tweet URL", name: "tweet-url", widget: 'url', default: ""  }
       - { label: "Body", name: "body", widget: "markdown", default: " " }
