--- a/_public/cms/config.yml
+++ b/_public/cms/config.yml
@@ -32,3 +32,15 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Tweet URL", name: "tweetUrl", widget: 'url', default: "", required: false  }
       - { label: "Body", name: "body", widget: "markdown", default: " " }
+  - name: "replies"
+    label: "Replies"
+    folder: "content/replies"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{hour}}-{{minute}}"
+    fields:
+      - { label: "Layout", name: "layout", widget: "hidden", default: "bookmark" }
+      - { label: "Tags", name: "tags", widget: "hidden", default: ["reply"] }
+      - { label: "Title", name: "title", widget: "string", default: "Reply to" }
+      - { label: "Target URL", name: 'url', widget: "url" }
+      - { label: "Body", name: "body", widget: "markdown", default: " " }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
