--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "netlify dev",
-    "build": "DEVELOPMENT=false eleventy",
-    "postbuild": "node post-build-css-inject.mjs",
+    "build": "DEVELOPMENT=false eleventy --config=.eleventy/.eleventy.js",
+    "postbuild": "node .eleventy/post-build-css-inject.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
