--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "netlify dev",
     "build": "DEVELOPMENT=false eleventy --config=.eleventy/.eleventy.js",
     "postbuild": "node .eleventy/post-build-css-inject.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "patch-package --patch-dir _patches"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "lodash": "4.17.21",
     "mkdirp": "1.0.4",
     "netlify-cli": "3.22.0",
+    "patch-package": "6.4.7",
     "postcss": "8.2.15",
     "postcss-custom-properties": "11.0.0",
     "postcss-import": "14.0.1",
