--- a/.github/workflows/webmentions.yml
+++ b/.github/workflows/webmentions.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 16.x
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install node-fetch@2.6.1 mkdirp@1.0.4 lodash@4.17.21
 
       - name: Fetch webmentions
         env:
