--- a/.github/workflows/webmentions.yml
+++ b/.github/workflows/webmentions.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Fetch webmentions
         env:
-          WEBMENTIONS_IO_TOKEN: ${{ secrets.WEBMENTION_IO_TOKEN }}
+          WEBMENTION_IO_TOKEN: ${{ secrets.WEBMENTION_IO_TOKEN }}
         run: node ./_automations/store-webmentions.mjs
 
       - name: Create Pull Request
