--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "glob-promise": "4.1.0",
     "gravatar": "1.8.1",
     "html-minifier": "4.0.0",
-    "lodash": "4.17.21",
-    "mkdirp": "1.0.4",
+    "lodash": "^4.17.21",
+    "mkdirp": "^1.0.4",
     "netlify-cli": "3.22.0",
     "patch-package": "6.4.7",
     "postcss": "8.2.15",
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "dayjs": "1.10.4",
-    "node-fetch": "2.6.1"
+    "dotenv": "^10.0.0",
+    "node-fetch": "^2.6.1"
   }
 }
