Allow webmentions workflow to be triggerd externally

--- a/.github/workflows/webmentions.yml
+++ b/.github/workflows/webmentions.yml
@@ -2,6 +2,8 @@ name: Webmentions
 
 on:
   workflow_dispatch:
+  repository_dispatch:
+    types: [trigger_pr_workflow]
   schedule:
     - cron: "0 */6 * * *"
 
