--- a/.github/workflows/webmentions.yml
+++ b/.github/workflows/webmentions.yml
@@ -14,13 +14,26 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@master
 
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
       - name: Set up Node.js
         uses: actions/setup-node@master
         with:
           node-version: 16.x
 
       - name: Install dependencies
-        run: npm install node-fetch@2.6.1 mkdirp@1.0.4 lodash@4.17.21 dotenv@10.0.0 --no-save
+        run: npm install
 
       - name: Fetch webmentions
         env:
