--- a/.github/workflows/webmentions.yml
+++ b/.github/workflows/webmentions.yml
@@ -5,7 +5,7 @@ on:
   repository_dispatch:
     types: [Received Webmention]
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: "0 0 * * *"
 
 jobs:
   webmentions:
