--- a/src/_public/cms/config.yml
+++ b/src/_public/cms/config.yml
@@ -21,6 +21,7 @@ collections:
       - { label: "Tags", name: "tags", widget: "list", allow_add: true, default: ["blog"] }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Tweet URL", name: "tweetUrl", widget: 'url', default: "", required: false  }
+      - { label: "Toot URL", name: "tootUrl", widget: 'url', default: "", required: false  }
       - { label: "Body", name: "body", widget: "markdown", default: " " }
 
   - name: "bookmarks"
