--- a/src/_public/cms/config.yml
+++ b/src/_public/cms/config.yml
@@ -49,6 +49,7 @@ collections:
       - { label: "Tags", name: "tags", widget: "hidden", default: ["like"] }
       - { label: "Title", name: "title", widget: "string", default: "Like of" }
       - { label: "Target URL", name: 'url', widget: "url" }
+      - { label: "Silo", name: 'silo', widget: 'select', options: ['twitter', 'mastodon', 'indieweb'], default: ['indieweb'] }
       - { label: "Publish Date", name: "date", widget: "datetime" }
 
   - name: "replies"
