--- a/src/_public/cms/config.yml
+++ b/src/_public/cms/config.yml
@@ -64,5 +64,6 @@ collections:
       - { label: "Tags", name: "tags", widget: "hidden", default: ["reply"] }
       - { label: "Title", name: "title", widget: "string", default: "Reply to" }
       - { label: "Target URL", name: 'url', widget: "url" }
+      - { label: "Silo", name: 'silo', widget: 'select', options: ['twitter', 'mastodon', 'indieweb'], default: ['indieweb'] }
       - { label: "Body", name: "body", widget: "markdown", default: " " }
       - { label: "Publish Date", name: "date", widget: "datetime" }
