display files changed since last action run

--- a/.github/workflows/sending-webmentions.yml
+++ b/.github/workflows/sending-webmentions.yml
@@ -13,6 +13,4 @@ jobs:
         env:
           AFTER: ${{ github.event.after }}
           BEFORE: ${{ github.event.before }}
-        run: |
-          echo "$BEFORE"
-          echo "$AFTER"
+        run: git diff --name-only $BEFORE $AFTER | cat
