--- a/.github/workflows/sending-webmentions.yml
+++ b/.github/workflows/sending-webmentions.yml
@@ -13,4 +13,5 @@ jobs:
         env:
           AFTER: ${{ github.event.after }}
           BEFORE: ${{ github.event.before }}
-        run: git diff --name-only $BEFORE $AFTER >> changed-files.txt
+        # run: git diff --name-only $BEFORE $AFTER >> changed-files.txt
+        run: git log
