fix use new files

--- a/.github/workflows/sending-webmentions.yml
+++ b/.github/workflows/sending-webmentions.yml
@@ -19,8 +19,9 @@ jobs:
           git diff --name-only bd96407 $AFTER | \
           grep "content/[bookmarks|likes|replies]" | \
           grep -v "index.md" | \
-          awk 'BEGIN { FS="/"; } { print "https://www.petergoes.nl/"$2"/"$3;}' | \
+          awk 'BEGIN { FS="/"; } { print "https://www.petergoes.nl/"$2"/"$3"/"";}' | \
           awk 'BEGIN { FS=".md" } { print $1 }' \
-          >> new-files.txt
-          cat new-files.txt
-          new-files.txt | xargs -I _ sh -c 'npx webmention _ --debug'
+          >> new-endpoints.txt
+          echo "New endpoints"
+          cat new-endpoints.txt
+          cat new-endpoints.txt | xargs -I _ sh -c 'npx webmention _ --debug'
