--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,6 @@
   to = "/bookmarks/tags/index.html"
   status = 200
   force = true
+
+[[plugins]]
+  package = "/.netlify/plugins/trigger-send-webmentions"
