--- a/netlify.toml
+++ b/netlify.toml
@@ -2,10 +2,13 @@
   command = "npx eleventy --config=.eleventy/.eleventy.js --serve --quiet"
 
 [functions]
-  directory = ".netlify/functions"
+  directory = "_netlify/functions"
 
 [[redirects]]
   from = "/bookmarks/tags/*"
   to = "/bookmarks/tags/index.html"
   status = 200
   force = true
+
+[[context.production.plugins]]
+  package = "/_netlify/plugins/trigger-send-webmentions"
