remove cat of mentions.log

--- a/.github/workflows/sending-webmentions.yml
+++ b/.github/workflows/sending-webmentions.yml
@@ -26,5 +26,4 @@ jobs:
           >> new-endpoints.txt
           echo "New endpoints"
           cat new-endpoints.txt
-          cat new-endpoints.txt | xargs -I _ sh -c 'npx webmention _ --debug >> mentions.log'
-          cat mentions.log
+          cat new-endpoints.txt | xargs -I _ sh -c 'npx webmention _ --debug'
