--- a/netlify.toml
+++ b/netlify.toml
@@ -11,4 +11,7 @@
   force = true
 
 [[context.production.plugins]]
+  package = "/_netlify/plugins/add-dot-env"
+
+[[context.production.plugins]]
   package = "/_netlify/plugins/trigger-send-webmentions"
