--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
   },
   "dependencies": {
     "dayjs": "1.10.4",
+    "eleventy-plugin-nesting-toc": "github:petergoes/eleventy-plugin-nesting-toc",
+    "markdown-it-abbr": "1.0.4",
+    "markdown-it-anchor": "7.1.0",
+    "markdown-it-footnote": "3.0.3",
     "node-fetch": "2.6.1"
   }
 }
