--- a/src/_public/cms/config.yml
+++ b/src/_public/cms/config.yml
@@ -16,6 +16,7 @@ collections:
     fields:
       - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
       - { label: "Publish", name: "permalink", widget: "publish", default: false }
+      - { label: "Language", name: "language", widget: "select", options: ["en", "nl"], default: ["en"] }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Tags", name: "tags", widget: "list", allow_add: true, default: ["blog"] }
@@ -64,6 +65,7 @@ collections:
       - { label: "Tags", name: "tags", widget: "hidden", default: ["note"] }
       - { label: "Title", name: "title", widget: "string", default: "Note" }
       - { label: "Body", name: "body", widget: "text", default: " " }
+      - { label: "Language", name: "language", widget: "select", options: ["en", "nl"], default: ["en"] }
       - { label: "Tweet URL", name: "tweetUrl", widget: 'url', default: "", required: false  }
       - { label: "Toot URL", name: "tootUrl", widget: 'url', default: "", required: false  }
       - { label: "Publish Date", name: "date", widget: "datetime" }
@@ -82,6 +84,7 @@ collections:
       - { label: "Target URL", name: 'url', widget: "url" }
       - { label: "Silo", name: 'silo', widget: 'select', options: ['twitter', 'mastodon', 'indieweb'], default: ['indieweb'] }
       - { label: "Body", name: "body", widget: "text", default: " " }
+      - { label: "Language", name: "language", widget: "select", options: ["en", "nl"], default: ["en"] }
       - { label: "Tweet URL", name: "tweetUrl", widget: 'url', default: "", required: false  }
       - { label: "Toot URL", name: "tootUrl", widget: 'url', default: "", required: false  }
       - { label: "Publish Date", name: "date", widget: "datetime" }
