--- a/package.json
+++ b/package.json
@@ -23,33 +23,33 @@
   "devDependencies": {
     "@11ty/eleventy": "0.12.1",
     "@11ty/eleventy-img": "0.8.3",
-    "@11ty/eleventy-plugin-inclusive-language": "1.0.2",
-    "@11ty/eleventy-plugin-rss": "1.1.1",
-    "autoprefixer": "10.2.5",
-    "cssnano": "4.1.11",
+    "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
     "dotenv-save": "1.2.0",
     "eleventy-plugin-highlightjs": "0.2.2",
-    "glob-promise": "4.1.0",
-    "gravatar": "1.8.1",
+    "glob-promise": "^5.0.0",
+    "gravatar": "^1.8.2",
     "html-minifier": "4.0.0",
     "lodash": "4.17.21",
     "mkdirp": "1.0.4",
-    "netlify-cli": "3.22.0",
-    "patch-package": "6.4.7",
-    "postcss": "8.2.15",
-    "postcss-custom-properties": "11.0.0",
-    "postcss-import": "14.0.1",
+    "netlify-cli": "^12.2.8",
+    "patch-package": "^6.5.0",
+    "postcss": "^8.4.19",
+    "postcss-custom-properties": "^12.1.11",
+    "postcss-import": "^15.0.1",
     "postcss-media-variables": "2.0.1",
-    "purgecss": "4.0.3"
+    "purgecss": "^5.0.0"
   },
   "dependencies": {
     "cheerio": "*",
-    "dayjs": "1.10.4",
+    "dayjs": "^1.11.6",
     "eleventy-plugin-nesting-toc": "github:petergoes/eleventy-plugin-nesting-toc",
     "markdown-it-abbr": "1.0.4",
-    "markdown-it-anchor": "7.1.0",
+    "markdown-it-anchor": "^8.6.5",
     "markdown-it-footnote": "3.0.3",
     "microformat-node": "2.0.1",
-    "node-fetch": "2.6.1"
+    "node-fetch": "^3.3.0",
+    "postcss-custom-media": "^9.0.1"
   }
 }
