--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   },
   "homepage": "https://github.com/petergoes/petergoes.nl#readme",
   "devDependencies": {
-    "@11ty/eleventy": "0.12.1",
-    "@11ty/eleventy-img": "0.8.3",
+    "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy-img": "^2.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
     "dotenv-save": "1.2.0",
-    "eleventy-plugin-highlightjs": "0.2.2",
+    "eleventy-plugin-highlightjs": "^1.1.0",
     "glob-promise": "^5.0.0",
     "gravatar": "^1.8.2",
     "html-minifier": "4.0.0",
